--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,15 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "args": ["--spec", "elf32.json", "--data", "a32.out"]
+        },
+        {
+            "name": "Python: main.py - 32/64",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}${pathSeparator}src${pathSeparator}main.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": ["--spec", "elf.json", "--data", "a64.out"]
         }
-
     ]
 }
