--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-    // IntelliSense を使用して利用可能な属性を学べます。
-    // 既存の属性の説明をホバーして表示します。
-    // 詳細情報は次を確認してください: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -11,7 +8,12 @@
             "program": "${workspaceFolder}${pathSeparator}src${pathSeparator}main.py",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "args": ["--spec", "elf64.json", "--data", "a64.out"]
+            "args": [
+                "--spec",
+                "elf64.json",
+                "--data",
+                "a64.out"
+            ]
         },
         {
             "name": "Python: main.py - 32",
@@ -20,7 +22,12 @@
             "program": "${workspaceFolder}${pathSeparator}src${pathSeparator}main.py",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "args": ["--spec", "elf32.json", "--data", "a32.out"]
+            "args": [
+                "--spec",
+                "elf32.json",
+                "--data",
+                "a32.out"
+            ]
         },
         {
             "name": "Python: main.py - 32/64",
@@ -29,24 +36,47 @@
             "program": "${workspaceFolder}${pathSeparator}src${pathSeparator}main.py",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "args": ["--spec", "elf.json", "--data", "a64.out"]
+            "args": [
+                "--spec",
+                "elf.json",
+                "--data",
+                "a64.out"
+            ]
         },
         {
-            "name": "Python: h2j.py",
+            "name": "lark: include to json",
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}${pathSeparator}src${pathSeparator}inc2json.py",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "args": ["--spec", "inc2json.lark", "--inc", "elf-part.h"]
+            "args": [
+                "--spec",
+                "inc2json.lark",
+                "--inc",
+                "elf-part.h"
+            ]
         },
         {
-            "name": "Python: lark test",
+            "name": "lark: test",
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}${pathSeparator}src${pathSeparator}ltest.py",
             "console": "integratedTerminal",
-            "justMyCode": false,
+            "justMyCode": false
         },
+        {
+            "name": "C: print sizeof",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${fileDirname}/${fileBasenameNoExtension}",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "lldb",
+            "preLaunchTask": "C/C++: gcc アクティブなファイルのビルド"
+        }
     ]
 }
